--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -19,22 +21,24 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section id="home">
             <h1>Welcome to My Portfolio</h1>
             <p>Hi, I'm Sakhe Hlela, a Web Developer.</p>
         </section>
+
         <section id="about">
             <h2>About Me</h2>
-            <img src="SakheProfileP2.jpeg" alt="My Photo" class="profile-photo">
+            <img src="images/SakheProfileP2.jpeg" alt="My Photo" class="profile-photo">
             <p>I'm a dedicated Web Development student passionate about creating dynamic, user-friendly websites. With
                 skills in HTML, CSS, and JavaScript,
                 I bring creative ideas to life through clean code. Explore my work to see how I blend creativity and
                 technical expertise
                 to deliver exceptional web solutions.</p>
-            <p><a href="https://docs.google.com/document/d/1mx61i78MvTlBv0fcateJWnPhCE9KgT8xkNczmkrGv1k/edit" target="_blank">View my CV</a>
-            </p>
+            <p><a href="https://docs.google.com/document/d/1mx61i78MvTlBv0fcateJWnPhCE9KgT8xkNczmkrGv1k/edit" target="_blank">View my CV</a></p>
         </section>
+
         <section id="skills">
             <h2>Skills</h2>
             <ul>
@@ -43,26 +47,33 @@
                 <li>JavaScript</li>
             </ul>
         </section>
+
         <section id="projects">
             <h2>Projects</h2>
             <p>I don't have projects to showcase yet.</p>
         </section>
+
         <section id="contact">
             <h2>Contact</h2>
             <p>Email: <a href="mailto:sakhe.hlela@umuzi.org">sakhe.hlela@umuzi.org</a></p>
         </section>
+
         <section id="news">
             <h2>Latest News</h2>
             <div id="news-container"></div>
         </section>
+
         <section id="weather">
             <h2>Current Weather</h2>
             <div id="weather-container"></div>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 Sakhe Hlela. All rights reserved.</p>
     </footer>
-    <script src="scripts.js"></script>
+
+    <script src="scripts/scripts.js"></script>
 </body>
+
 </html>
