--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <img src="images/SakheProfileP2.jpeg" alt="My Photo" class="profile-photo">
+            <img src="images/WhatsApp Image 2024-09-03 at 10.51.54 PM.jpeg" alt="My Photo" class="profile-photo">
             <p>I'm a dedicated Web Development student passionate about creating dynamic, user-friendly websites. With
                 skills in HTML, CSS, and JavaScript,
                 I bring creative ideas to life through clean code. Explore my work to see how I blend creativity and
