--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <div class="menu-toggle">Menu</div> <!-- Toggle button for mobile menu -->
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
