--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <div class="menu-toggle">Menu</div> <!-- Toggle button for mobile menu -->
         <nav>
+            <div class="menu-toggle">Menu</div> <!-- Toggle Button for Mobile -->
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Me</a></li>
